--- a/WebApplication/Views/Login/SignIn.cshtml
+++ b/WebApplication/Views/Login/SignIn.cshtml
@@ -157,7 +157,7 @@
 
 
                                 <div class="text-center w-75 m-auto">
-                                    <p class="text-muted mb-4 mt-3" style="font-size: 20px;">Enter your details to create your account.</p>
+                                    <p class="text-muted mb-4 mt-3" style="font-size: 20px;">Enter your details to create account.</p>
                                 </div>
 
                                 <div class="form-group mb-3">
@@ -188,7 +188,11 @@
                                     @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                                 </div>
 
-                              
+                                <div class="form-group mb-3">
+                                    @Html.LabelFor(m => m.KeyCredential, new { @class = "control-label" })
+                                    @Html.TextBoxFor(m => m.KeyCredential, new { @class = "form-control", placeholder = "Enter your key credential phrase"})
+                                    @Html.ValidationMessageFor(m => m.KeyCredential, "", new { @class = "text-danger" })
+                                </div>
                      
 
 
