--- a/WebApplication/Views/ManageUsers/EditUser.cshtml
+++ b/WebApplication/Views/ManageUsers/EditUser.cshtml
@@ -16,7 +16,7 @@
 
     <div class="form-group">
         <label for="username">Username</label>
-        <textarea class="form-control" id="username" name="Name" required>@Model.Username</textarea>
+        <textarea class="form-control" id="username" name="Username" required>@Model.Username</textarea>
     </div>
 
     <div class="form-group">
@@ -29,15 +29,15 @@
         <textarea type="text" class="form-control" id="Password" name="Password" required>@Model.Password</textarea>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label for="ConfirmPassword">Confirm Password</label>
         <textarea type="text" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required>@Model.ConfirmPassword</textarea>
-    </div>
+    </div>*@
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label for="KeyCredential">Key Credential</label>
         <textarea type="text" class="form-control" id="KeyCredential" name="KeyCredential">@Model.KeyCredential</textarea>
-    </div>
+    </div>*@
 
 
     <button type="submit" class="btn btn-primary">Save changes</button>
